# CryptoParser

./: .env.example  .gitignore  README.md  need.txt  pyproject.toml
src/app/: __main__.py  config.py  main.py
src/app/domain/: errors.py  models.py  protocols.py
src/app/infra/providers/binance/: client.py  mapper.py
src/app/infra/providers/bybit/: client.py  mapper.py
src/app/infra/providers/coingecko/: client.py  mapper.py
src/app/infra/storages/: file_storage.py
src/app/services/: collector.py
tests/: stest_binance_client.py  test_collector.py
tests/test_mappers/: test_binance_mapper.py  test_bybit_mapper.py  test_coingecko_mapper.py
