[project]
name = "rates_service"
version = "0.1.0"
description = "Async data collector for crypto rates from multiple providers"

dependencies = [
    "aiohttp>=3.9.0",
    "loguru>=0.7.0",
    "pydantic-settings>=2.0.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0"
]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88